[gd_scene load_steps=4 format=3 uid="uid://bfcgkjerxsay3"]

[ext_resource type="Script" path="res://scripts/weapon_base.gd" id="1_vppsp"]
[ext_resource type="AudioStream" uid="uid://e44s2urpbjo" path="res://assets/audio/Kenney/laserSmall_002.ogg" id="2_dxxpn"]
[ext_resource type="PackedScene" uid="uid://l41vqqu0yc67" path="res://objects/enemy_projectile.tscn" id="2_isycy"]

[node name="WeaponBase" type="Node3D"]
script = ExtResource("1_vppsp")
projectile_scene = ExtResource("2_isycy")
shoot_impulse = 2.0
weapon_cooldown = 9.0

[node name="ShootAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(3.33333, 0, 0, 0, 3.33333, 0, 0, 0, 3.33333, 0, 0, 0)
stream = ExtResource("2_dxxpn")
unit_size = 3.0
max_polyphony = 2

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.5

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
